Sickle Cell RBC Exchange Volume

--- a/gdl2/Sickle_Cell_RBC_Exchange_Volume_guideline.v1.test.yml
+++ b/gdl2/Sickle_Cell_RBC_Exchange_Volume_guideline.v1.test.yml
@@ -1,120 +1,67 @@
 guidelines:
   1: Sickle_Cell_RBC_Exchange_Volume_guideline.v1
 test_cases:
-- id: Warning Too high to all variables
+- id: Male, in, lb
   input:
     1:
       gt0003|Patient sex: local::at0005|Male|
-      gt0005|Patient height: 229,cm
-      gt0007|Patient weight: 70,kg
-      gt0026|Patient hematocrit: 101,%
-      gt0027|Patient's initial HgbS: 101,%
-      gt0028|Goal HgbS: 31,%
-      gt0029|Hematocrit of transfused RBCs: 101,%
-  expected_output:
-    1:
-      gt0019|Warning Patient hematocrit: Too high please change to proceed.
-      gt0020|Warning Patient's initial HgbS: Too high please change to proceed.
-      gt0021|Warning Goal HgbS: Too high please change to proceed.
-      gt0018|Warning Patient height: Too high please change to proceed.
-      gt0022|Warning Hematocrit of transfused RBCs: Too high please change to proceed.
-- id: Warning very low to Height, Htc, Hgbs, Htc transfused
-  input:
-    1:
-      gt0003|Patient sex: local::at0005|Male|
-      gt0005|Patient height: 12,cm
-      gt0007|Patient weight: 70,kg
-      gt0026|Patient hematocrit: 9,%
-      gt0027|Patient's initial HgbS: 19,%
+      gt0005|Patient height: 80,in
+      gt0007|Patient weight: 160,lb
+      gt0026|Patient hematocrit: 20,%
+      gt0027|Patient's initial HgbS: 20,%
       gt0028|Goal HgbS: 1,%
-      gt0029|Hematocrit of transfused RBCs: 54,%
-  expected_output:
-    1:
-      gt0019|Warning Patient hematocrit: Very low double-check.
-      gt0021|Warning Goal HgbS: Very low double-check.
-      gt0024|RBC replacement volume: 1423.10,ml
-      gt0036|Approximate number of units, assuming 350 mL RBCs per unit: 4,1
-      gt0018|Warning Patient height: Very low double-check.
-      gt0022|Warning Hematocrit of transfused RBCs: Very low double-check.
-      gt0031|Total blood volume: 2.9,l
-      gt0034|RBC volume: 261,ml
-- id: Warning Too low to HgbS
-  input:
-    1:
-      gt0003|Patient sex: local::at0005|Male|
-      gt0005|Patient height: 180,cm
-      gt0007|Patient weight: 70,kg
-      gt0026|Patient hematocrit: 20,%
-      gt0027|Patient's initial HgbS: 20,%
-      gt0028|Goal HgbS: 0,%
-      gt0029|Hematocrit of transfused RBCs: 80,%
-  expected_output:
-    1:
-      gt0021|Warning Goal HgbS: Too low please change to proceed.
-      gt0031|Total blood volume: 5.0,l
-      gt0034|RBC volume: 1000,ml
-- id: Warning too high to Hgbs
-  input:
-    1:
-      gt0003|Patient sex: local::at0005|Male|
-      gt0005|Patient height: 180,cm
-      gt0007|Patient weight: 70,kg
-      gt0026|Patient hematocrit: 20,%
-      gt0027|Patient's initial HgbS: 20,%
-      gt0028|Goal HgbS: 31,%
-      gt0029|Hematocrit of transfused RBCs: 80,%
-  expected_output:
-    1:
-      gt0021|Warning Goal HgbS: Too high please change to proceed.
-      gt0031|Total blood volume: 5.0,l
-      gt0034|RBC volume: 1000,ml
-- id: Waring very high to Height, p.Htc, Htc transfused
-  input:
-    1:
-      gt0003|Patient sex: local::at0005|Male|
-      gt0005|Patient height: 228,cm
-      gt0007|Patient weight: 70,kg
-      gt0026|Patient hematocrit: 41,%
-      gt0027|Patient's initial HgbS: 20,%
-      gt0028|Goal HgbS: 31,%
-      gt0029|Hematocrit of transfused RBCs: 86,%
-  expected_output:
-    1:
-      gt0019|Warning Patient hematocrit: Very high double-check.
-      gt0021|Warning Goal HgbS: Too high please change to proceed.
-      gt0018|Warning Patient height: Very high double-check.
-      gt0022|Warning Hematocrit of transfused RBCs: Very high double-check.
-      gt0031|Total blood volume: 7.2,l
-      gt0034|RBC volume: 2952,ml
-- id: RBC exchange replacement volume Male
-  input:
-    1:
-      gt0003|Patient sex: local::at0005|Male|
-      gt0005|Patient height: 180,cm
-      gt0007|Patient weight: 70,kg
-      gt0026|Patient hematocrit: 25,%
-      gt0027|Patient's initial HgbS: 20,%
-      gt0028|Goal HgbS: 5,%
       gt0029|Hematocrit of transfused RBCs: 55,%
   expected_output:
     1:
-      gt0024|RBC replacement volume: 3150.70,ml
-      gt0036|Approximate number of units, assuming 350 mL RBCs per unit: 9,1
-      gt0031|Total blood volume: 5.0,l
-      gt0034|RBC volume: 1250,ml
-- id: RBC exchange replacement volume Female
+      gt0024|RBC replacement volume: 6557.90,ml
+      gt0036|Approximate number of units, assuming 350 mL RBCs per unit: 19,1
+      gt0031|Total blood volume: 6.019,l
+      gt0034|RBC volume: 1204,ml
+- id: Female, in, lb
   input:
     1:
       gt0003|Patient sex: local::at0006|Female|
-      gt0005|Patient height: 180,cm
-      gt0007|Patient weight: 70,kg
-      gt0026|Patient hematocrit: 25,%
+      gt0005|Patient height: 80,in
+      gt0007|Patient weight: 160,lb
+      gt0026|Patient hematocrit: 20,%
       gt0027|Patient's initial HgbS: 20,%
-      gt0028|Goal HgbS: 5,%
+      gt0028|Goal HgbS: 1,%
       gt0029|Hematocrit of transfused RBCs: 55,%
   expected_output:
     1:
-      gt0024|RBC replacement volume: 2898.60,ml
-      gt0036|Approximate number of units, assuming 350 mL RBCs per unit: 8,1
-      gt0031|Total blood volume: 4.6,l
-      gt0034|RBC volume: 1150,ml
+      gt0024|RBC replacement volume: 6067.70,ml
+      gt0036|Approximate number of units, assuming 350 mL RBCs per unit: 17,1
+      gt0031|Total blood volume: 5.572,l
+      gt0034|RBC volume: 1114,ml
+- id: Feamle, kh, cm
+  input:
+    1:
+      gt0003|Patient sex: local::at0006|Female|
+      gt0005|Patient height: 200,cm
+      gt0007|Patient weight: 80,kg
+      gt0026|Patient hematocrit: 20,%
+      gt0027|Patient's initial HgbS: 20,%
+      gt0028|Goal HgbS: 1,%
+      gt0029|Hematocrit of transfused RBCs: 55,%
+  expected_output:
+    1:
+      gt0024|RBC replacement volume: 6187.50,ml
+      gt0036|Approximate number of units, assuming 350 mL RBCs per unit: 18,1
+      gt0031|Total blood volume: 5.678,l
+      gt0034|RBC volume: 1136,ml
+- id: Male, kg, cm
+  input:
+    1:
+      gt0003|Patient sex: local::at0005|Male|
+      gt0005|Patient height: 200,cm
+      gt0007|Patient weight: 80,kg
+      gt0026|Patient hematocrit: 20,%
+      gt0027|Patient's initial HgbS: 20,%
+      gt0028|Goal HgbS: 1,%
+      gt0029|Hematocrit of transfused RBCs: 55,%
+  expected_output:
+    1:
+      gt0024|RBC replacement volume: 6661.40,ml
+      gt0036|Approximate number of units, assuming 350 mL RBCs per unit: 19,1
+      gt0031|Total blood volume: 6.114,l
+      gt0034|RBC volume: 1223,ml
