--- a/gdl2/BED_Calculator_guideline.v1.test.yml
+++ b/gdl2/BED_Calculator_guideline.v1.test.yml
@@ -1,25 +1,13 @@
 guidelines:
   1: BED_Calculator_guideline.v1
 test_cases:
-- id: Too high Warning
-  input:
-    1:
-      gt0003|Dose per fraction: 101,Gy
-      gt0004|Total dose: 101,Gy
-      gt0005|α/β ratio: 10000001,Gy
-  expected_output:
-    1:
-      gt0007|Warning to Dose per fraction: Too high, please change to proceed.
-      gt0008|Warning to Total dose: Too high, please change to proceed.
-      gt0009|Warning to α/β ratio: Too high, please change to proceed.
-- id: Warning very high and BED
+- id: EQD2 and BED
   input:
     1:
       gt0003|Dose per fraction: 10,Gy
       gt0004|Total dose: 22,Gy
-      gt0005|α/β ratio: 1000000,Gy
+      gt0005|α/β ratio: 100000,Gy
   expected_output:
     1:
       gt0011|EQD2: 22.00,Gy
       gt0010|BED: 22.00,Gy
-      gt0009|Warning to α/β ratio: Very high, double-check.
