--- a/gdl2/Tokyo_Guidelines_Acute_Cholecystitis_2018_guideline.v1.test.yml
+++ b/gdl2/Tokyo_Guidelines_Acute_Cholecystitis_2018_guideline.v1.test.yml
@@ -1,146 +1,138 @@
 guidelines:
   1: Tokyo_Guidelines_Acute_Cholecystitis_2018_guideline.v1
 test_cases:
-- id: Entry criteria not met
+- id: Entry criteria not met case 1
   input:
     1:
-      gt0004|Murphy's sign: 0|local::at0006|No|
-      gt0005|Right upper abdominal quadrant mass, pain, or tenderness: 0|local::at0009|No|
-      gt0006|Fever: 0|local::at0014|No|
-      gt0007|Elevated CRP: 0|local::at0017|No|
-      gt0008|Elevated WBC count: 0|local::at0020|No|
-      gt0009|Imaging findings characteristic of acute cholecystitis: 0|local::at0025|no|
+      gt0043|Murphy's sign: 0|local::at0006|No|
+      gt0044|Right upper abdominal quadrant mass, pain, or tenderness: 0|local::at0009|No|
+      gt0045|Fever: 1|local::at0015|Yes|
+      gt0046|Elevated CRP: 0|local::at0017|No|
+      gt0047|Elevated WBC count: 0|local::at0020|No|
+      gt0048|Imaging findings characteristic of acute cholecystitis: 0|local::at0025|no|
   expected_output:
     1:
-      gt0020|Par A score: 0
-      gt0021|Par B score: 0
       gt0025|Diagnosis of acute cholecystitis: local::at0005|Entry criteria not met for acute cholecystitis diagnosis|
-- id: Suspected (≥1 item in A + ≥1 item in B)
+- id: Entry criteria not met case 2
   input:
     1:
-      gt0004|Murphy's sign: 1|local::at0007|Yes|
-      gt0005|Right upper abdominal quadrant mass, pain, or tenderness: 0|local::at0009|No|
-      gt0006|Fever: 1|local::at0015|Yes|
-      gt0007|Elevated CRP: 0|local::at0017|No|
-      gt0008|Elevated WBC count: 0|local::at0020|No|
-      gt0009|Imaging findings characteristic of acute cholecystitis: 0|local::at0025|no|
+      gt0043|Murphy's sign: 0|local::at0006|No|
+      gt0044|Right upper abdominal quadrant mass, pain, or tenderness: 0|local::at0009|No|
+      gt0045|Fever: 0|local::at0014|No|
+      gt0046|Elevated CRP: 0|local::at0017|No|
+      gt0047|Elevated WBC count: 0|local::at0020|No|
+      gt0048|Imaging findings characteristic of acute cholecystitis: 0|local::at0025|no|
   expected_output:
     1:
-      gt0020|Par A score: 1
-      gt0021|Par B score: 1
+      gt0025|Diagnosis of acute cholecystitis: local::at0005|Entry criteria not met for acute cholecystitis diagnosis|
+- id: Suspected diagnosis A ≥1, B ≥1, C=0
+  input:
+    1:
+      gt0043|Murphy's sign: 1|local::at0007|Yes|
+      gt0044|Right upper abdominal quadrant mass, pain, or tenderness: 0|local::at0009|No|
+      gt0045|Fever: 1|local::at0015|Yes|
+      gt0046|Elevated CRP: 0|local::at0017|No|
+      gt0047|Elevated WBC count: 0|local::at0020|No|
+      gt0048|Imaging findings characteristic of acute cholecystitis: 0|local::at0025|no|
+  expected_output:
+    1:
       gt0025|Diagnosis of acute cholecystitis: local::at0004|Suspected|
-- id: Suspected (≥1 item in A + ≥1 item in C)
+- id: Suspected Diagnosis A≥1, B=0, C≥1
   input:
     1:
-      gt0004|Murphy's sign: 1|local::at0007|Yes|
-      gt0005|Right upper abdominal quadrant mass, pain, or tenderness: 0|local::at0009|No|
-      gt0006|Fever: 0|local::at0014|No|
-      gt0007|Elevated CRP: 0|local::at0017|No|
-      gt0008|Elevated WBC count: 0|local::at0020|No|
-      gt0009|Imaging findings characteristic of acute cholecystitis: 1|local::at0026|Yes|
+      gt0043|Murphy's sign: 1|local::at0007|Yes|
+      gt0044|Right upper abdominal quadrant mass, pain, or tenderness: 0|local::at0009|No|
+      gt0045|Fever: 0|local::at0014|No|
+      gt0046|Elevated CRP: 0|local::at0017|No|
+      gt0047|Elevated WBC count: 0|local::at0020|No|
+      gt0048|Imaging findings characteristic of acute cholecystitis: 1|local::at0026|Yes|
   expected_output:
     1:
-      gt0020|Par A score: 1
-      gt0021|Par B score: 0
       gt0025|Diagnosis of acute cholecystitis: local::at0004|Suspected|
-- id: Definite (≥1 item in A, B, and C)
+- id: Definite diagnosis A=1, B=1, C=1
   input:
     1:
-      gt0004|Murphy's sign: 1|local::at0007|Yes|
-      gt0005|Right upper abdominal quadrant mass, pain, or tenderness: 0|local::at0009|No|
-      gt0006|Fever: 1|local::at0015|Yes|
-      gt0007|Elevated CRP: 0|local::at0017|No|
-      gt0008|Elevated WBC count: 0|local::at0020|No|
-      gt0009|Imaging findings characteristic of acute cholecystitis: 1|local::at0026|Yes|
+      gt0043|Murphy's sign: 1|local::at0007|Yes|
+      gt0044|Right upper abdominal quadrant mass, pain, or tenderness: 0|local::at0009|No|
+      gt0045|Fever: 1|local::at0015|Yes|
+      gt0046|Elevated CRP: 0|local::at0017|No|
+      gt0047|Elevated WBC count: 0|local::at0020|No|
+      gt0048|Imaging findings characteristic of acute cholecystitis: 1|local::at0026|Yes|
   expected_output:
     1:
-      gt0020|Par A score: 1
-      gt0021|Par B score: 1
       gt0025|Diagnosis of acute cholecystitis: local::at0003|Definite|
-- id: Grade I
-  input:
-    1:
-      gt0004|Murphy's sign: 1|local::at0007|Yes|
-      gt0005|Right upper abdominal quadrant mass, pain, or tenderness: 0|local::at0009|No|
-      gt0006|Fever: 1|local::at0015|Yes|
-      gt0007|Elevated CRP: 0|local::at0017|No|
-      gt0008|Elevated WBC count: 0|local::at0020|No|
-      gt0009|Imaging findings characteristic of acute cholecystitis: 1|local::at0026|Yes|
-      gt0010|Cardiovascular dysfunction: 0|local::at0029|No|
-      gt0011|Neurological dysfunction: 0|local::at0032|No|
-      gt0012|Respiratory dysfunction: 0|local::at0035|No|
-      gt0013|Renal dysfunction: 0|local::at0038|No|
-      gt0014|Hepatic dysfunction: 0|local::at0041|No|
-      gt0015|Hematological dysfunction: 0|local::at0044|No|
-      gt0016|Elevated WBC count: 0|local::at0050|No|
-      gt0017|Palpable tender mass in the right upper abdominal quadrant: 0|local::at0053|No|
-      gt0018|Duration of complaints >72 hours: 0|local::at0056|No|
-      gt0019|Marked local inflammation: 0|local::at0060|No|
-  expected_output:
-    1:
-      gt0020|Par A score: 1
-      gt0022|Grade III score: 0
-      gt0021|Par B score: 1
-      gt0023|Grade II score: 0
-      gt0028|30 day mortality: local::at0015|1.1%|
-      gt0025|Diagnosis of acute cholecystitis: local::at0003|Definite|
-      gt0026|Grade: local::at0007|I|
-      gt0027|Acute cholecystitis severity: local::at0011|Mild|
-- id: Grade III
-  input:
-    1:
-      gt0004|Murphy's sign: 1|local::at0007|Yes|
-      gt0005|Right upper abdominal quadrant mass, pain, or tenderness: 0|local::at0009|No|
-      gt0006|Fever: 1|local::at0015|Yes|
-      gt0007|Elevated CRP: 0|local::at0017|No|
-      gt0008|Elevated WBC count: 0|local::at0020|No|
-      gt0009|Imaging findings characteristic of acute cholecystitis: 1|local::at0026|Yes|
-      gt0010|Cardiovascular dysfunction: 1|local::at0030|Yes|
-      gt0011|Neurological dysfunction: 0|local::at0032|No|
-      gt0012|Respiratory dysfunction: 0|local::at0035|No|
-      gt0013|Renal dysfunction: 0|local::at0038|No|
-      gt0014|Hepatic dysfunction: 0|local::at0041|No|
-      gt0015|Hematological dysfunction: 0|local::at0044|No|
-      gt0016|Elevated WBC count: 0|local::at0050|No|
-      gt0017|Palpable tender mass in the right upper abdominal quadrant: 0|local::at0053|No|
-      gt0018|Duration of complaints >72 hours: 0|local::at0056|No|
-      gt0019|Marked local inflammation: 0|local::at0060|No|
-  expected_output:
-    1:
-      gt0020|Par A score: 1
-      gt0022|Grade III score: 1
-      gt0021|Par B score: 1
-      gt0023|Grade II score: 0
-      gt0028|30 day mortality: local::at0016|0.8%|
-      gt0025|Diagnosis of acute cholecystitis: local::at0003|Definite|
-      gt0026|Grade: local::at0009|III|
-      gt0027|Acute cholecystitis severity: local::at0013|Severe|
 - id: Grade II
   input:
     1:
-      gt0004|Murphy's sign: 1|local::at0007|Yes|
-      gt0005|Right upper abdominal quadrant mass, pain, or tenderness: 0|local::at0009|No|
-      gt0006|Fever: 1|local::at0015|Yes|
-      gt0007|Elevated CRP: 0|local::at0017|No|
-      gt0008|Elevated WBC count: 0|local::at0020|No|
-      gt0009|Imaging findings characteristic of acute cholecystitis: 1|local::at0026|Yes|
-      gt0010|Cardiovascular dysfunction: 0|local::at0029|No|
-      gt0011|Neurological dysfunction: 0|local::at0032|No|
-      gt0012|Respiratory dysfunction: 0|local::at0035|No|
-      gt0013|Renal dysfunction: 0|local::at0038|No|
-      gt0014|Hepatic dysfunction: 0|local::at0041|No|
-      gt0015|Hematological dysfunction: 0|local::at0044|No|
-      gt0016|Elevated WBC count: 0|local::at0050|No|
-      gt0017|Palpable tender mass in the right upper abdominal quadrant: 0|local::at0053|No|
-      gt0018|Duration of complaints >72 hours: 0|local::at0056|No|
-      gt0019|Marked local inflammation: 1|local::at0061|Yes|
+      gt0043|Murphy's sign: 1|local::at0007|Yes|
+      gt0044|Right upper abdominal quadrant mass, pain, or tenderness: 0|local::at0009|No|
+      gt0045|Fever: 1|local::at0015|Yes|
+      gt0046|Elevated CRP: 0|local::at0017|No|
+      gt0047|Elevated WBC count: 0|local::at0020|No|
+      gt0048|Imaging findings characteristic of acute cholecystitis: 1|local::at0026|Yes|
+      gt0049|Cardiovascular dysfunction: 0|local::at0029|No|
+      gt0050|Neurological dysfunction: 0|local::at0032|No|
+      gt0051|Respiratory dysfunction: 0|local::at0035|No|
+      gt0052|Renal dysfunction: 0|local::at0038|No|
+      gt0053|Hepatic dysfunction: 0|local::at0041|No|
+      gt0054|Hematological dysfunction: 0|local::at0044|No|
+      gt0055|Elevated WBC count: 1|local::at0051|Yes|
+      gt0056|Palpable tender mass in the right upper abdominal quadrant: 0|local::at0053|No|
+      gt0057|Duration of complaints >72 hours: 0|local::at0056|No|
+      gt0058|Marked local inflammation: 0|local::at0060|No|
   expected_output:
     1:
-      gt0020|Par A score: 1
-      gt0022|Grade III score: 0
-      gt0021|Par B score: 1
-      gt0023|Grade II score: 1
+      gt0039|Grade: local::at0064|II|
       gt0028|30 day mortality: local::at0016|0.8%|
       gt0025|Diagnosis of acute cholecystitis: local::at0003|Definite|
-      gt0026|Grade: local::at0008|II|
       gt0027|Acute cholecystitis severity: local::at0012|Moderate|
+- id: Grade III=1, Grade II=1 Diagnosis is grade III
+  input:
+    1:
+      gt0043|Murphy's sign: 1|local::at0007|Yes|
+      gt0044|Right upper abdominal quadrant mass, pain, or tenderness: 0|local::at0009|No|
+      gt0045|Fever: 1|local::at0015|Yes|
+      gt0046|Elevated CRP: 0|local::at0017|No|
+      gt0047|Elevated WBC count: 0|local::at0020|No|
+      gt0048|Imaging findings characteristic of acute cholecystitis: 1|local::at0026|Yes|
+      gt0049|Cardiovascular dysfunction: 1|local::at0030|Yes|
+      gt0050|Neurological dysfunction: 0|local::at0032|No|
+      gt0051|Respiratory dysfunction: 0|local::at0035|No|
+      gt0052|Renal dysfunction: 0|local::at0038|No|
+      gt0053|Hepatic dysfunction: 0|local::at0041|No|
+      gt0054|Hematological dysfunction: 0|local::at0044|No|
+      gt0055|Elevated WBC count: 1|local::at0051|Yes|
+      gt0056|Palpable tender mass in the right upper abdominal quadrant: 0|local::at0053|No|
+      gt0057|Duration of complaints >72 hours: 0|local::at0056|No|
+      gt0058|Marked local inflammation: 0|local::at0060|No|
+  expected_output:
+    1:
+      gt0039|Grade: local::at0065|III|
+      gt0028|30 day mortality: local::at0017|5.4%|
+      gt0025|Diagnosis of acute cholecystitis: local::at0003|Definite|
+      gt0027|Acute cholecystitis severity: local::at0013|Severe|
+- id: Grade I
+  input:
+    1:
+      gt0043|Murphy's sign: 1|local::at0007|Yes|
+      gt0044|Right upper abdominal quadrant mass, pain, or tenderness: 0|local::at0009|No|
+      gt0045|Fever: 1|local::at0015|Yes|
+      gt0046|Elevated CRP: 0|local::at0017|No|
+      gt0047|Elevated WBC count: 0|local::at0020|No|
+      gt0048|Imaging findings characteristic of acute cholecystitis: 1|local::at0026|Yes|
+      gt0049|Cardiovascular dysfunction: 0|local::at0029|No|
+      gt0050|Neurological dysfunction: 0|local::at0032|No|
+      gt0051|Respiratory dysfunction: 0|local::at0035|No|
+      gt0052|Renal dysfunction: 0|local::at0038|No|
+      gt0053|Hepatic dysfunction: 0|local::at0041|No|
+      gt0054|Hematological dysfunction: 0|local::at0044|No|
+      gt0055|Elevated WBC count: 0|local::at0050|No|
+      gt0056|Palpable tender mass in the right upper abdominal quadrant: 0|local::at0053|No|
+      gt0057|Duration of complaints >72 hours: 0|local::at0056|No|
+      gt0058|Marked local inflammation: 0|local::at0060|No|
+  expected_output:
+    1:
+      gt0039|Grade: local::at0063|I|
+      gt0028|30 day mortality: local::at0015|1.1%|
+      gt0025|Diagnosis of acute cholecystitis: local::at0003|Definite|
+      gt0027|Acute cholecystitis severity: local::at0011|Mild|
