--- a/gdl2/Pediatric_NEXUS_II_Head_CT_Decision_guideline.v1.test.yml
+++ b/gdl2/Pediatric_NEXUS_II_Head_CT_Decision_guideline.v1.test.yml
@@ -1,7 +1,7 @@
 guidelines:
   1: Pediatric_NEXUS_II_Head_CT_Decision_guideline.v1
 test_cases:
-- id: score equal 0
+- id: criteria 0
   input:
     1:
       gt0003|Evidence of skull fracture: 0|local::at0005|No|
@@ -11,25 +11,25 @@ test_cases:
       gt0007|Abnormal behavior: 0|local::at0017|No|
       gt0008|Persistent vomiting: 0|local::at0020|No|
       gt0009|Coagulopathy: 0|local::at0023|No|
-      gt0016|Age: 17,a
+      gt0016|Age: 12,a
   expected_output:
     1:
-      gt0011|NEXUS II score: 0
-      gt0019|Risk of significant intracranial injuries: local::at0003|Low|
-      gt0020|Recommendation: local::at0006|CT not necessary (100% sensitive for findings requiring neurosurgical intervention)|
-- id: score more than 0
+      gt0011|Present criteria: 0
+      gt0023|Recommendation: local::at0006|CT not necessary (100% sensitive for findings requiring neurosurgical intervention)|
+      gt0022|Risk of significant intracranial injuries: local::at0003|Low|
+- id: present criteria 7
   input:
     1:
       gt0003|Evidence of skull fracture: 1|local::at0006|Yes|
-      gt0004|Scalp hematoma: 0|local::at0008|No|
-      gt0005|Neurologic deficit: 0|local::at0011|No|
-      gt0006|Abnormal level of alertness: 0|local::at0014|No|
-      gt0007|Abnormal behavior: 0|local::at0017|No|
-      gt0008|Persistent vomiting: 0|local::at0020|No|
-      gt0009|Coagulopathy: 0|local::at0023|No|
-      gt0016|Age: 17,a
+      gt0004|Scalp hematoma: 1|local::at0009|Yes|
+      gt0005|Neurologic deficit: 1|local::at0012|Yes|
+      gt0006|Abnormal level of alertness: 1|local::at0015|Yes|
+      gt0007|Abnormal behavior: 1|local::at0018|Yes|
+      gt0008|Persistent vomiting: 1|local::at0021|Yes|
+      gt0009|Coagulopathy: 1|local::at0024|Yes|
+      gt0016|Age: 12,a
   expected_output:
     1:
-      gt0011|NEXUS II score: 1
-      gt0019|Risk of significant intracranial injuries: local::at0004|High|
-      gt0020|Recommendation: local::at0007|Consider CT|
+      gt0011|Present criteria: 7
+      gt0023|Recommendation: local::at0007|Consider CT|
+      gt0022|Risk of significant intracranial injuries: local::at0004|High|
