--- a/gdl2/Pediatric_NEXUS_II_Head_CT_Decision_guideline.v1.test.yml
+++ b/gdl2/Pediatric_NEXUS_II_Head_CT_Decision_guideline.v1.test.yml
@@ -14,7 +14,7 @@ test_cases:
       gt0016|Age: 12,a
   expected_output:
     1:
-      gt0011|Present criteria: 0
+      gt0011|Criteria present: 0
       gt0023|Recommendation: local::at0006|CT not necessary (100% sensitive for findings requiring neurosurgical intervention)|
       gt0022|Risk of significant intracranial injuries: local::at0003|Low|
 - id: present criteria 7
@@ -30,6 +30,6 @@ test_cases:
       gt0016|Age: 12,a
   expected_output:
     1:
-      gt0011|Present criteria: 7
+      gt0011|Criteria present: 7
       gt0023|Recommendation: local::at0007|Consider CT|
       gt0022|Risk of significant intracranial injuries: local::at0004|High|
