--- a/gdl2/SIRS_Sepsis_Septic_Shock_Criteria_guideline.v1.test.yml
+++ b/gdl2/SIRS_Sepsis_Septic_Shock_Criteria_guideline.v1.test.yml
@@ -1,73 +1,142 @@
 guidelines:
   1: SIRS_Sepsis_Septic_Shock_Criteria_guideline.v1
 test_cases:
-- id: Not met SIRS criteria.
+- id: This patient does not meet SIRS criteria
   input:
     1:
       gt0003|Temp >38°C (100.4°F) or < 36°C (96.8°F): 0|local::at0006|No|
       gt0004|Heart rate > 90: 0|local::at0009|No|
       gt0005|Respiratory rate > 20 or PaCO₂ < 32 mm Hg: 0|local::at0012|No|
-      gt0006|WBC > 12,000/mm³, < 4,000/mm³, or > 10% bands: 1|local::at0016|Yes|
+      gt0006|WBC > 12,000/mm³, < 4,000/mm³, or > 10% bands: 0|local::at0015|No|
+      gt0007|Suspected or present source of infection: 0|local::at0020|No|
+      gt0008|Lactic acidosis, SBP <90 or SBP drop ≥ 40 mm Hg of normal: 0|local::at0024|No|
+      gt0009|Severe sepsis with hypotension, despite adequate fluid resuscitation: 0|local::at0028|No|
+      gt0010|Evidence of ≥ 2 organs failing: 0|local::at0032|No|
+      gt0026|Age: 18,a
   expected_output:
     1:
-      gt0013|Total score: 1
-      gt0023|Result: local::at0045|Not met SIRS criteria. Check for other causes of shock.|
-- id: SIRS criteria are met
+      gt0023|Result: This patient does not meet SIRS criteria. Check for other causes of shock.
+- id: This patient meets SIRS criteria
   input:
     1:
-      gt0003|Temp >38°C (100.4°F) or < 36°C (96.8°F): 0|local::at0006|No|
-      gt0004|Heart rate > 90: 0|local::at0009|No|
-      gt0005|Respiratory rate > 20 or PaCO₂ < 32 mm Hg: 1|local::at0013|Yes|
-      gt0006|WBC > 12,000/mm³, < 4,000/mm³, or > 10% bands: 1|local::at0016|Yes|
+      gt0003|Temp >38°C (100.4°F) or < 36°C (96.8°F): 1|local::at0007|Yes|
+      gt0004|Heart rate > 90: 1|local::at0010|Yes|
+      gt0005|Respiratory rate > 20 or PaCO₂ < 32 mm Hg: 0|local::at0012|No|
+      gt0006|WBC > 12,000/mm³, < 4,000/mm³, or > 10% bands: 0|local::at0015|No|
+      gt0007|Suspected or present source of infection: 0|local::at0020|No|
+      gt0008|Lactic acidosis, SBP <90 or SBP drop ≥ 40 mm Hg of normal: 0|local::at0024|No|
+      gt0009|Severe sepsis with hypotension, despite adequate fluid resuscitation: 0|local::at0028|No|
+      gt0010|Evidence of ≥ 2 organs failing: 0|local::at0032|No|
+      gt0026|Age: 18,a
   expected_output:
     1:
-      gt0013|Total score: 2
-      gt0023|Result: local::at0040|SIRS criteria are met.|
-- id: Sepsis criteria are met.
+      gt0023|Result: This patient meets SIRS criteria.
+- id: SIRS + Source of Infection
   input:
     1:
-      gt0003|Temp >38°C (100.4°F) or < 36°C (96.8°F): 0|local::at0006|No|
-      gt0004|Heart rate > 90: 0|local::at0009|No|
-      gt0005|Respiratory rate > 20 or PaCO₂ < 32 mm Hg: 1|local::at0013|Yes|
-      gt0006|WBC > 12,000/mm³, < 4,000/mm³, or > 10% bands: 1|local::at0016|Yes|
+      gt0003|Temp >38°C (100.4°F) or < 36°C (96.8°F): 1|local::at0007|Yes|
+      gt0004|Heart rate > 90: 1|local::at0010|Yes|
+      gt0005|Respiratory rate > 20 or PaCO₂ < 32 mm Hg: 0|local::at0012|No|
+      gt0006|WBC > 12,000/mm³, < 4,000/mm³, or > 10% bands: 0|local::at0015|No|
       gt0007|Suspected or present source of infection: 1|local::at0021|Yes|
+      gt0008|Lactic acidosis, SBP <90 or SBP drop ≥ 40 mm Hg of normal: 0|local::at0024|No|
+      gt0009|Severe sepsis with hypotension, despite adequate fluid resuscitation: 0|local::at0028|No|
+      gt0010|Evidence of ≥ 2 organs failing: 0|local::at0032|No|
+      gt0026|Age: 18,a
   expected_output:
     1:
-      gt0013|Total score: 2
-      gt0023|Result: local::at0041|Sepsis criteria are met. Follow your guidelines for sepsis, which typically include aggressive fluid resuscitation, early, broad-spectrum anbiotics, ICU consultation, CVP evaluation, and occasionally pressors and transfusion.|
-- id: Severe sepsis criteria are met.
+      gt0027|Comment: Follow your guidelines for sepsis, which typically include aggressive fluid resuscitation, early, broad-spectrum anbiotics, ICU consultation, CVP evaluation, and occasionally pressors and transfusion.
+      gt0023|Result: This patient meets sepsis criteria.
+- id: Severe Sepsis Criteria
   input:
     1:
-      gt0003|Temp >38°C (100.4°F) or < 36°C (96.8°F): 0|local::at0006|No|
-      gt0004|Heart rate > 90: 0|local::at0009|No|
-      gt0005|Respiratory rate > 20 or PaCO₂ < 32 mm Hg: 1|local::at0013|Yes|
-      gt0006|WBC > 12,000/mm³, < 4,000/mm³, or > 10% bands: 1|local::at0016|Yes|
+      gt0003|Temp >38°C (100.4°F) or < 36°C (96.8°F): 1|local::at0007|Yes|
+      gt0004|Heart rate > 90: 1|local::at0010|Yes|
+      gt0005|Respiratory rate > 20 or PaCO₂ < 32 mm Hg: 0|local::at0012|No|
+      gt0006|WBC > 12,000/mm³, < 4,000/mm³, or > 10% bands: 0|local::at0015|No|
+      gt0007|Suspected or present source of infection: 0|local::at0020|No|
       gt0008|Lactic acidosis, SBP <90 or SBP drop ≥ 40 mm Hg of normal: 1|local::at0025|Yes|
+      gt0009|Severe sepsis with hypotension, despite adequate fluid resuscitation: 0|local::at0028|No|
+      gt0010|Evidence of ≥ 2 organs failing: 0|local::at0032|No|
+      gt0026|Age: 18,a
   expected_output:
     1:
-      gt0013|Total score: 2
-      gt0023|Result: local::at0042|Severe sepsis criteria are met.|
-- id: Septic shock criteria are met.
+      gt0023|Result: This patient severe sepsis criteria.
+- id: Septic Shock Criteria
   input:
     1:
-      gt0003|Temp >38°C (100.4°F) or < 36°C (96.8°F): 0|local::at0006|No|
-      gt0004|Heart rate > 90: 0|local::at0009|No|
-      gt0005|Respiratory rate > 20 or PaCO₂ < 32 mm Hg: 1|local::at0013|Yes|
-      gt0006|WBC > 12,000/mm³, < 4,000/mm³, or > 10% bands: 1|local::at0016|Yes|
+      gt0003|Temp >38°C (100.4°F) or < 36°C (96.8°F): 1|local::at0007|Yes|
+      gt0004|Heart rate > 90: 1|local::at0010|Yes|
+      gt0005|Respiratory rate > 20 or PaCO₂ < 32 mm Hg: 0|local::at0012|No|
+      gt0006|WBC > 12,000/mm³, < 4,000/mm³, or > 10% bands: 0|local::at0015|No|
+      gt0007|Suspected or present source of infection: 0|local::at0020|No|
+      gt0008|Lactic acidosis, SBP <90 or SBP drop ≥ 40 mm Hg of normal: 0|local::at0024|No|
       gt0009|Severe sepsis with hypotension, despite adequate fluid resuscitation: 1|local::at0029|Yes|
+      gt0010|Evidence of ≥ 2 organs failing: 0|local::at0032|No|
+      gt0026|Age: 18,a
   expected_output:
     1:
-      gt0013|Total score: 2
-      gt0023|Result: local::at0043|Septic shock criteria are met.|
-- id: Multiple organ dysfunction syndrome is met.
+      gt0023|Result: This patient meets septic shock criteria.
+- id: Multiple Organ Dysfunction Syndrome Criteria
   input:
     1:
-      gt0003|Temp >38°C (100.4°F) or < 36°C (96.8°F): 0|local::at0006|No|
-      gt0004|Heart rate > 90: 0|local::at0009|No|
-      gt0005|Respiratory rate > 20 or PaCO₂ < 32 mm Hg: 1|local::at0013|Yes|
-      gt0006|WBC > 12,000/mm³, < 4,000/mm³, or > 10% bands: 1|local::at0016|Yes|
+      gt0003|Temp >38°C (100.4°F) or < 36°C (96.8°F): 1|local::at0007|Yes|
+      gt0004|Heart rate > 90: 1|local::at0010|Yes|
+      gt0005|Respiratory rate > 20 or PaCO₂ < 32 mm Hg: 0|local::at0012|No|
+      gt0006|WBC > 12,000/mm³, < 4,000/mm³, or > 10% bands: 0|local::at0015|No|
+      gt0007|Suspected or present source of infection: 0|local::at0020|No|
+      gt0008|Lactic acidosis, SBP <90 or SBP drop ≥ 40 mm Hg of normal: 0|local::at0024|No|
+      gt0009|Severe sepsis with hypotension, despite adequate fluid resuscitation: 0|local::at0028|No|
       gt0010|Evidence of ≥ 2 organs failing: 1|local::at0033|Yes|
+      gt0026|Age: 18,a
   expected_output:
     1:
-      gt0013|Total score: 2
-      gt0023|Result: local::at0044|Multiple organ dysfunction syndrome is met.|
+      gt0023|Result: This patient meets multiple organ dysfunction syndrome.
+- id: severe sepsis criteria+ Sepsis Criteria
+  input:
+    1:
+      gt0003|Temp >38°C (100.4°F) or < 36°C (96.8°F): 1|local::at0007|Yes|
+      gt0004|Heart rate > 90: 1|local::at0010|Yes|
+      gt0005|Respiratory rate > 20 or PaCO₂ < 32 mm Hg: 0|local::at0012|No|
+      gt0006|WBC > 12,000/mm³, < 4,000/mm³, or > 10% bands: 0|local::at0015|No|
+      gt0007|Suspected or present source of infection: 1|local::at0021|Yes|
+      gt0008|Lactic acidosis, SBP <90 or SBP drop ≥ 40 mm Hg of normal: 1|local::at0025|Yes|
+      gt0009|Severe sepsis with hypotension, despite adequate fluid resuscitation: 0|local::at0028|No|
+      gt0010|Evidence of ≥ 2 organs failing: 0|local::at0032|No|
+      gt0026|Age: 18,a
+  expected_output:
+    1:
+      gt0027|Comment: Follow your guidelines for sepsis, which typically include aggressive fluid resuscitation, early, broad-spectrum anbiotics, ICU consultation, CVP evaluation, and occasionally pressors and transfusion.
+      gt0023|Result: This patient severe sepsis criteria.
+- id: septic shock criteria+ sepsis Criteria
+  input:
+    1:
+      gt0003|Temp >38°C (100.4°F) or < 36°C (96.8°F): 1|local::at0007|Yes|
+      gt0004|Heart rate > 90: 1|local::at0010|Yes|
+      gt0005|Respiratory rate > 20 or PaCO₂ < 32 mm Hg: 0|local::at0012|No|
+      gt0006|WBC > 12,000/mm³, < 4,000/mm³, or > 10% bands: 0|local::at0015|No|
+      gt0007|Suspected or present source of infection: 1|local::at0021|Yes|
+      gt0008|Lactic acidosis, SBP <90 or SBP drop ≥ 40 mm Hg of normal: 0|local::at0024|No|
+      gt0009|Severe sepsis with hypotension, despite adequate fluid resuscitation: 1|local::at0029|Yes|
+      gt0010|Evidence of ≥ 2 organs failing: 0|local::at0032|No|
+      gt0026|Age: 18,a
+  expected_output:
+    1:
+      gt0027|Comment: Follow your guidelines for sepsis, which typically include aggressive fluid resuscitation, early, broad-spectrum anbiotics, ICU consultation, CVP evaluation, and occasionally pressors and transfusion.
+      gt0023|Result: This patient meets septic shock criteria.
+- id: Multiple Organ Dysfunction Syndrome Criteria+ Sepsis Criteria 
+  input:
+    1:
+      gt0003|Temp >38°C (100.4°F) or < 36°C (96.8°F): 1|local::at0007|Yes|
+      gt0004|Heart rate > 90: 1|local::at0010|Yes|
+      gt0005|Respiratory rate > 20 or PaCO₂ < 32 mm Hg: 0|local::at0012|No|
+      gt0006|WBC > 12,000/mm³, < 4,000/mm³, or > 10% bands: 0|local::at0015|No|
+      gt0007|Suspected or present source of infection: 1|local::at0021|Yes|
+      gt0008|Lactic acidosis, SBP <90 or SBP drop ≥ 40 mm Hg of normal: 0|local::at0024|No|
+      gt0009|Severe sepsis with hypotension, despite adequate fluid resuscitation: 0|local::at0028|No|
+      gt0010|Evidence of ≥ 2 organs failing: 1|local::at0033|Yes|
+      gt0026|Age: 18,a
+  expected_output:
+    1:
+      gt0027|Comment: Follow your guidelines for sepsis, which typically include aggressive fluid resuscitation, early, broad-spectrum anbiotics, ICU consultation, CVP evaluation, and occasionally pressors and transfusion.
+      gt0023|Result: This patient meets multiple organ dysfunction syndrome.
