Update metadata and fix negative values

--- a/gdl2/Mumtaz_score_for_readmission_in_cirrhosis.v1.test.yml
+++ b/gdl2/Mumtaz_score_for_readmission_in_cirrhosis.v1.test.yml
@@ -24,7 +24,7 @@ test_cases:
 - id: Total score 48
   input:
     1:
-      gt0004|Primary payer: 4|local::at0011|Medicare\r\n|
+      gt0004|Primary payer: 4|local::at0011|Medicare|
       gt0005|Elixhauser Comorbidity Index: 2|local::at0016|≥3|
       gt0006|Non-alcoholic etiology of cirrhosis: 2|local::at0019|Yes|
       gt0007|Ascites: 5|local::at0022|Yes|
@@ -64,7 +64,7 @@ test_cases:
 - id: Total score 46
   input:
     1:
-      gt0004|Primary payer: 4|local::at0011|Medicare\r\n|
+      gt0004|Primary payer: 4|local::at0011|Medicare|
       gt0005|Elixhauser Comorbidity Index: 0|local::at0015|<3|
       gt0006|Non-alcoholic etiology of cirrhosis: 2|local::at0019|Yes|
       gt0007|Ascites: 5|local::at0022|Yes|
@@ -104,7 +104,7 @@ test_cases:
 - id: Total score 44
   input:
     1:
-      gt0004|Primary payer: 4|local::at0011|Medicare\r\n|
+      gt0004|Primary payer: 4|local::at0011|Medicare|
       gt0005|Elixhauser Comorbidity Index: 0|local::at0015|<3|
       gt0006|Non-alcoholic etiology of cirrhosis: 0|local::at0018|No|
       gt0007|Ascites: 5|local::at0022|Yes|
@@ -285,7 +285,7 @@ test_cases:
 - id: Total score 35
   input:
     1:
-      gt0004|Primary payer: 4|local::at0011|Medicare\r\n|
+      gt0004|Primary payer: 4|local::at0011|Medicare|
       gt0005|Elixhauser Comorbidity Index: 0|local::at0015|<3|
       gt0006|Non-alcoholic etiology of cirrhosis: 0|local::at0018|No|
       gt0007|Ascites: 0|local::at0021|No|
@@ -325,7 +325,7 @@ test_cases:
 - id: Total score 33
   input:
     1:
-      gt0004|Primary payer: 4|local::at0011|Medicare\r\n|
+      gt0004|Primary payer: 4|local::at0011|Medicare|
       gt0005|Elixhauser Comorbidity Index: 2|local::at0016|≥3|
       gt0006|Non-alcoholic etiology of cirrhosis: 0|local::at0018|No|
       gt0007|Ascites: 5|local::at0022|Yes|
@@ -345,7 +345,7 @@ test_cases:
 - id: Total score 32
   input:
     1:
-      gt0004|Primary payer: 4|local::at0011|Medicare\r\n|
+      gt0004|Primary payer: 4|local::at0011|Medicare|
       gt0005|Elixhauser Comorbidity Index: 0|local::at0015|<3|
       gt0006|Non-alcoholic etiology of cirrhosis: 2|local::at0019|Yes|
       gt0007|Ascites: 5|local::at0022|Yes|
@@ -405,7 +405,7 @@ test_cases:
 - id: Total score 29
   input:
     1:
-      gt0004|Primary payer: 4|local::at0011|Medicare\r\n|
+      gt0004|Primary payer: 4|local::at0011|Medicare|
       gt0005|Elixhauser Comorbidity Index: 2|local::at0016|≥3|
       gt0006|Non-alcoholic etiology of cirrhosis: 2|local::at0019|Yes|
       gt0007|Ascites: 0|local::at0021|No|
