Update WAT score

--- a/gdl2/Withdrawal_Assessment_Tool_for_pediatric_withdrawal.v0.yml
+++ b/gdl2/Withdrawal_Assessment_Tool_for_pediatric_withdrawal.v0.yml
@@ -1,5 +1,5 @@
 guidelines:
-  1: Withdrawal_Assessment_Tool_Pediatric_Withdrawal.v0
+  1: Withdrawal_Assessment_Tool_for_pediatric_withdrawal.v0
 test_cases:
 - id: Test no input
   input:
@@ -188,7 +188,7 @@ test_cases:
   expected_output:
     1:
       gt0015|WAT-1 Score: 1
-      gt0017|Interpretation: Median duration of opioid or benzodiazepine weaning is 6 days
+      gt0017|Interpretation: Median duration of opioid or benzodiazepine weaning is 6 days.
 - id: Test interpretation for score >=3
   input:
     1:
@@ -206,4 +206,4 @@ test_cases:
   expected_output:
     1:
       gt0015|WAT-1 Score: 3
-      gt0017|Interpretation: Median duration of opioid or benzodiazepine weaning is 10 days
+      gt0017|Interpretation: Median duration of opioid or benzodiazepine weaning is 10 days.
