--- a/gdl2/Visual_Acuity.v1.test.yml
+++ b/gdl2/Visual_Acuity.v1.test.yml
@@ -1,11 +1,6 @@
 guidelines:
   1: Visual_Acuity.v1
 test_cases:
-- id: Test no input
-  input:
-    1: {}
-  expected_output:
-    1: {}
 - id: Test Line 1
   input:
     1:
@@ -13,8 +8,7 @@ test_cases:
   expected_output:
     1:
       gt0015|Comment: Visual acuity worse than 20/25 (6/7.5 if non-US) should be evaluated by a licensed eye professional to determine whether corrective lenses or other treatments may be necessary
-      gt0016|Equivalent in non-US units: 6/60
-      gt0005|Visual acuity: local::at0020|20/200|
+      gt0005|Visual acuity: local::at0020|20/200 (Equivalent to 6/60, non-US)|
 - id: Test Line 2
   input:
     1:
@@ -22,8 +16,7 @@ test_cases:
   expected_output:
     1:
       gt0015|Comment: Visual acuity worse than 20/25 (6/7.5 if non-US) should be evaluated by a licensed eye professional to determine whether corrective lenses or other treatments may be necessary
-      gt0016|Equivalent in non-US units: 6/30
-      gt0005|Visual acuity: local::at0021|20/100|
+      gt0005|Visual acuity: local::at0021|20/100 (Equivalent to 6/30, non-US)|
 - id: Test Line 3
   input:
     1:
@@ -31,8 +24,7 @@ test_cases:
   expected_output:
     1:
       gt0015|Comment: Visual acuity worse than 20/25 (6/7.5 if non-US) should be evaluated by a licensed eye professional to determine whether corrective lenses or other treatments may be necessary
-      gt0016|Equivalent in non-US units: 6/21
-      gt0005|Visual acuity: local::at0022|20/70|
+      gt0005|Visual acuity: local::at0022|20/70 (Equivalent to 6/21, non-US)|
 - id: Test Line 4
   input:
     1:
@@ -40,8 +32,7 @@ test_cases:
   expected_output:
     1:
       gt0015|Comment: Visual acuity worse than 20/25 (6/7.5 if non-US) should be evaluated by a licensed eye professional to determine whether corrective lenses or other treatments may be necessary
-      gt0016|Equivalent in non-US units: 6/15
-      gt0005|Visual acuity: local::at0023|20/50|
+      gt0005|Visual acuity: local::at0023|20/50 (Equivalent to 6/15, non-US)|
 - id: Test Line 5
   input:
     1:
@@ -49,8 +40,7 @@ test_cases:
   expected_output:
     1:
       gt0015|Comment: Visual acuity worse than 20/25 (6/7.5 if non-US) should be evaluated by a licensed eye professional to determine whether corrective lenses or other treatments may be necessary
-      gt0016|Equivalent in non-US units: 6/12
-      gt0005|Visual acuity: local::at0024|20/40|
+      gt0005|Visual acuity: local::at0024|20/40 (Equivalent to 6/12, non-US)|
 - id: Test Line 6
   input:
     1:
@@ -58,45 +48,18 @@ test_cases:
   expected_output:
     1:
       gt0015|Comment: Visual acuity worse than 20/25 (6/7.5 if non-US) should be evaluated by a licensed eye professional to determine whether corrective lenses or other treatments may be necessary
-      gt0016|Equivalent in non-US units: 6/9
-      gt0005|Visual acuity: local::at0025|20/30|
+      gt0005|Visual acuity: local::at0025|20/30 (Equivalent to 6/9, non-US)|
 - id: Test Line 7
   input:
     1:
       gt0003|Select lowest line that patient can read correctly.: local::at0013|Line 7|
   expected_output:
     1:
-      gt0016|Equivalent in non-US units: 6/7.5
-      gt0005|Visual acuity: local::at0026|20/25|
-- id: Test Line 8
-  input:
-    1:
-      gt0003|Select lowest line that patient can read correctly.: local::at0014|Line 8|
-  expected_output:
-    1:
-      gt0016|Equivalent in non-US units: 6/6
-      gt0005|Visual acuity: local::at0027|20/20|
-- id: Test Line 9
-  input:
-    1:
-      gt0003|Select lowest line that patient can read correctly.: local::at0015|Line 9|
-  expected_output:
-    1:
-      gt0016|Equivalent in non-US units: 6/6
-      gt0005|Visual acuity: local::at0027|20/20|
-- id: Test Line 10
+      gt0005|Visual acuity: local::at0026|20/25 (Equivalent to 6/7.5, non-US)|
+- id: Test Line 8-11
   input:
     1:
       gt0003|Select lowest line that patient can read correctly.: local::at0016|Line 10|
   expected_output:
     1:
-      gt0016|Equivalent in non-US units: 6/6
-      gt0005|Visual acuity: local::at0027|20/20|
-- id: Test Line 11
-  input:
-    1:
-      gt0003|Select lowest line that patient can read correctly.: local::at0017|Line 11|
-  expected_output:
-    1:
-      gt0016|Equivalent in non-US units: 6/6
-      gt0005|Visual acuity: local::at0027|20/20|
+      gt0005|Visual acuity: local::at0027|20/20 (Equivalent to 6/6, non-US)|
