Test Multiple Myeloma ISS

--- a/gdl2/Multiple_Myeloma_ISS.v1.test.yml
+++ b/gdl2/Multiple_Myeloma_ISS.v1.test.yml
@@ -13,6 +13,7 @@ test_cases:
   expected_output:
     1:
       gt0006|Interpretation: Stage III
+      gt0017|Comment: Median survival is 29 months
 - id: Test Stage II
   input:
     1:
@@ -21,6 +22,7 @@ test_cases:
   expected_output:
     1:
       gt0006|Interpretation: Stage II
+      gt0017|Comment: Median survival is 44 months
 - id: Test Stage I
   input:
     1:
@@ -29,3 +31,4 @@ test_cases:
   expected_output:
     1:
       gt0006|Interpretation: Stage I
+      gt0017|Comment: Median survival is 62 months
