--- a/gdl2/Multiple_Myeloma_Diagnostic_Criteria.v1.test.yml
+++ b/gdl2/Multiple_Myeloma_Diagnostic_Criteria.v1.test.yml
@@ -30,13 +30,10 @@ test_cases:
     1:
       gt0003|A. Clonal bone marrow plasma cells ≥10%: 1|local::at0025|Yes|
       gt0004|B. Biopsy-proven bony or extramedullary plasmacytoma: 0|local::at0027|No|
-      gt0005|C1. Hypercalcemia: 0|local::at0032|No|
+      gt0005|C1. Hypercalcemia: 1|local::at0033|Yes|
       gt0006|C1. Renal insufficiency: 0|local::at0035|No|
       gt0007|C1. Anemia: 1|local::at0039|Yes|
-      gt0008|C1. Bone lesions: 0|local::at0041|No|
-      gt0009|C2. Clonal bone marrow plasma cells ≥60%: 1|local::at0045|Yes|
-      gt0010|C2. Involved:uninvolved sFLC ratio ≥100: 0|local::at0047|No|
-      gt0011|C2. >1 focal lesion on MRI: 0|local::at0050|No|
+      gt0008|C1. Bone lesions: 1|local::at0042|Yes|
   expected_output:
     1:
       gt0015|Diagnostic result: Positive for multiple myeloma
