--- a/gdl2/Sgarbossas_criteria_for_MI_in_LBBB.v1.test.yml
+++ b/gdl2/Sgarbossas_criteria_for_MI_in_LBBB.v1.test.yml
@@ -1,5 +1,5 @@
 guidelines:
-  1: Sgarbossa's_criteria_for_MI_in_LBBB.v1
+  1: Sgarbossas_criteria_for_MI_in_LBBB.v1
 test_cases:
 - id: Sgarbossa's score <3
   input:
