update test fixture

--- a/gdl2/Multiple_Myeloma_Diagnostic_Criteria.v1.test.yml
+++ b/gdl2/Multiple_Myeloma_Diagnostic_Criteria.v1.test.yml
@@ -20,12 +20,13 @@ test_cases:
 - id: Test Criteria C2 score
   input:
     1:
-      gt0010|C2. Involved:uninvolved sFLC ratio ≥100: 0|local::at0047|No|
+      gt0009|C2. Clonal bone marrow plasma cells ≥60%: 0|local::at0044|No|
+      gt0010|C2. Involved:uninvolved sFLC ratio ≥100: 1|local::at0048|Yes|
       gt0011|C2. >1 focal lesion on MRI: 0|local::at0050|No|
   expected_output:
     1:
-      gt0015|Diagnostic result: Negative for multiple myeloma
-- id: Score above criteria returns 'Positive for multiple myeloma'
+      gt0015|Diagnostic result: Negative for multiple myeloma 
+- id: Score above criteria returns Positive for multiple myeloma
   input:
     1:
       gt0003|A. Clonal bone marrow plasma cells ≥10%: 1|local::at0025|Yes|
